# synchro

./: .gitignore  .golangci.yml  .watchmanconfig  404.html  LICENSE  Makefile  Package.swift  README.md  Synchro.podspec  bucket_resolver.go  changelog.go  checkpoint.go  checksum.go  checksum_test.go  client.go  compaction.go  compaction_test.go  conflict.go  conflict_test.go  db.go  db_test.go  engine.go  errors.go  failure_test.go  go.mod  go.sum  helpers.go  helpers_test.go  hooks.go  index.html  infra.go  integration_test.go  introspection_test.go  mkdocs.yml  ownership.go  ownership_test.go  protocol.go  protocol_test.go  pull.go  pull_test.go  (+13 more)
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml  rn-ios-validation.yml
Sources/Synchro/: ChangeTracker.swift  Errors.swift  HttpClient.swift  Models.swift  PullProcessor.swift  (+4 more)
_astro/: Search.astro_astro_type_script_index_0_lang.DRmpnjx6.js  ui-core.DXdAyjuE.js
clients/: ARCHITECTURE.md  README.md
conformance/: README.md  test-inventory.md
docs/: architecture.md  astro.config.mjs  configuration.md  index.md  package-lock.json  package.json  protocol.md
extensions/: Cargo.toml
extensions/synchro-core/: Cargo.toml
extensions/synchro-core/src/: change.rs  checksum.rs  conflict.rs  contract.rs  dedup.rs  edge_diff.rs  lib.rs  limits.rs  protocol.rs  state.rs  version.rs
extensions/synchro-pg/: Cargo.toml  synchro_pg.control
extensions/synchro-pg/sql/: synchro_pg--0.1.0.sql  synchro_pg--0.2.0.sql
extensions/synchro-pg/src/: bgworker.rs  bucketing.rs  client.rs  compaction.rs  cursor_token.rs  lib.rs  materialize.rs  portable_seed.rs  pull.rs  push.rs  rebuild.rs  registry.rs  schema.rs  wal_decoder.rs
handler/: handler.go  handler_test.go  middleware.go
migrate/: migrations.go
pagefind/: pagefind-entry.json  pagefind.en_9bb460cb4f.pf_meta
seeddb/: seeddb.go  seeddb_test.go
synctest/: synctest.go  testdb.go
wal/: consumer.go  consumer_failure_test.go  consumer_integration_test.go  decoder.go  position.go
(+251 files in other folders)
